--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,31 @@
-h1, h2 {
+* {
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
+h1 {
     font-family: 'Georgia', Times, Times New Roman, serif;
+    display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+}
+
+h2 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    display: block;
+    font-size: 1.5em;
+    margin-top: 0.83em;
+    margin-bottom: 0.83em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
 }
 
 #h-style1 {
@@ -20,16 +46,21 @@ body {
     background-image: url("../images/ignasi_pattern_s.png");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
-    height: 100%;
+    min-height: 100%;
     margin: 0;
+    position: relative;
+    padding-bottom: 90px;
 }
 
 .row {
     display: flex; /* equal height of the children */
+    width: 960px;
+    margin: auto;
+    /*box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);*/
 }
 
 .col {
-    padding: 10px;
+
 }
 
 .entireContentArea {
@@ -40,15 +71,26 @@ body {
     margin-bottom: -100px;
 }
 
+#sideBuffer {
+    float: left;
+}
+
 .logo {
     float: left;
     background-color: #4aaaa5;
+    width: 40%;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
 }
 
 .headerLinks {
     background-color: #fff;
     float: left;
     text-align: right;
+    width: 60%;
+    padding: 10px;
+    margin: auto;
 }
 
 /* unvisited link */
@@ -84,21 +126,22 @@ a:active {
 .maincontent {
     background-color: #fff;
     width: 650px;
-    margin-right: 5px;
     margin-bottom: 35px;
     float: left;
     padding: 7px;
     line-height: 32px;
     border: 1px #dddddd solid;
+    box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);
 }
 
 .sidecontent {
     background-color: #fff;
     width: 270px;
-    float: left;
+    float: right;
     padding: 7px;
     text-align: center;
     border: 1px #dddddd solid;
+    box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);
 }
 
 #lefty {
@@ -106,14 +149,23 @@ a:active {
     margin-right: 15px;
 }
 
-.footer, .push {
+.footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
     height: 90px;
     clear: both;
     background-color: #666666;
     text-align: center;
     color: #c4c4c4;
     font-size: small;
-    line-height: 90px;
+    line-height: 80px;
     border-top: #4aaaa5 10px solid;
+}
+
+.extraSpace {
+    clear: both;
+    height: 50px;
 }
 
