--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 h1 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     display: block;
     font-size: 2em;
     margin-top: 0.67em;
@@ -18,7 +18,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     display: block;
     font-size: 1.5em;
     margin-top: 0.83em;
@@ -29,9 +29,9 @@ h2 {
 }
 
 h3 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     display: block;
-    font-size: 1.5em;
+    font-size: 20px;
     margin-top: 0.83em;
     margin-bottom: 0.83em;
     margin-left: 0;
@@ -40,7 +40,14 @@ h3 {
     background-color: #4aaaa5;
     color: #efeee7;
     padding: 5px;
+    text-align: center;
+    width: 270px;
     position: absolute;
+    top: 120px;
+}
+
+img:hover {
+    border: 3px #4aaaa5 solid;
 }
 
 #pos1 {
