--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ header {
 }
 
 body {
-    background-image: url("../images/ignasi_pattern_s.png");
+    background-image: url("../images/grey_wash_wall.png");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     min-height: 100%;
