--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,29 +7,27 @@ html {
 }
 
 h1 {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     display: block;
-    font-size: 2em;
-    margin-top: 0.67em;
-    margin-bottom: 0.67em;
+    font-size: 2.3em;
+    margin-top: 0.375em;
+    margin-bottom: 0.3em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;
 }
 
 h2 {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     display: block;
     font-size: 1.5em;
     margin-top: 0.83em;
     margin-bottom: 0.83em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: bold;
 }
 
 h3 {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     display: block;
     font-size: 20px;
     margin-top: 0.83em;
@@ -43,14 +41,43 @@ h3 {
     text-align: center;
     width: 270px;
     position: absolute;
-    top: 120px;
+    top: 145px;
+    left: 15px;
+}
+
+h3:hover {
+    background-color: #666666;
+}
+
+.pipeColor {
+    color: #dedede;
+    display: inline;
+}
+
+.linkImages {
+    height: 58px;
+    width: 58px;
+}
+
+#profileImage {
+    float: left;
+    margin-right: 15px;
+    margin-top: 15px;
+    height: 225px;
+    width: 225px;
+}
+
+.portfolioImage {
+    height: 200px;
+    width: 270px;
+    margin: 15px;
 }
 
 img:hover {
     border: 3px #4aaaa5 solid;
 }
 
-#pos1 {
+.pos1 {
     position: relative;
 }
 
@@ -60,7 +87,7 @@ img:hover {
     color: #fff;
 }
 
-#h-style2 {
+.h-style2 {
     color: #4aaaa5;
 }
 
@@ -68,10 +95,11 @@ header {
     background-color: #fff;
     margin-bottom: 20px;
     border: 2px #cccccc solid;
+    box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);
 }
 
 body {
-    background-image: url("../images/grey_wash_wall.png");
+    background-image: url("../images/ignasi_pattern_s.png");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     min-height: 100%;
@@ -87,10 +115,6 @@ body {
     /*box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);*/
 }
 
-.col {
-
-}
-
 .entireContentArea {
     clear: both;
     width: 960px;
@@ -99,14 +123,10 @@ body {
     margin-bottom: -100px;
 }
 
-#sideBuffer {
-    float: left;
-}
-
 .logo {
     float: left;
     background-color: #4aaaa5;
-    width: 40%;
+    width: 42%;
     padding: 10px;
     margin: auto;
     text-align: center;
@@ -116,7 +136,7 @@ body {
     background-color: #fff;
     float: left;
     text-align: right;
-    width: 60%;
+    width: 58%;
     padding: 10px;
     margin: auto;
 }
@@ -124,6 +144,14 @@ body {
 .button {
     background-color: #4aaaa5;
     color: #efeee7;
+    border: none;
+    height: 35px;
+    width: 80px;
+    text-align: center;
+}
+
+.button:hover {
+    background-color: #666666;
 }
 
 /* unvisited link */
@@ -147,7 +175,7 @@ a:active {
 }
 
 #hrStyle1 {
-    margin: 30px auto;
+    margin: 20px auto;
     border-top: 2px solid #c9c9c9;
 }
 
@@ -161,7 +189,7 @@ a:active {
     width: 650px;
     margin-bottom: 35px;
     float: left;
-    padding: 7px;
+    padding: 15px;
     line-height: 32px;
     border: 1px #dddddd solid;
     box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);
@@ -175,11 +203,6 @@ a:active {
     text-align: center;
     border: 1px #dddddd solid;
     box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);
-}
-
-#lefty {
-    float: left;
-    margin-right: 15px;
 }
 
 .footer {
